# foundationpose_cpp

./: .gitignore  CMakeLists.txt  NativeEnvSetup.md  NativeEnvSetup_orin.md
detection_6d_foundationpose/: CMakeLists.txt
detection_6d_foundationpose/src/: foundationpose.cpp
detection_6d_foundationpose/src/mesh_loader/: assimp_mesh_loader.cpp
docker/: foundationpose_orin.dockerfile
simple_tests/: CMakeLists.txt
simple_tests/include/tests/: help_func.hpp
simple_tests/src/: test_foundationpose.cpp
tools/: cvt_onnx2trt_models.bash
